Add InsertStatement